workshop1/hello-springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-deployment
  namespace: hello-kubernetes
  labels:
    app: hello-spring-boot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-spring-boot
  template:
    metadata:
      labels:
        app: hello-spring-boot
    spec:
      containers:
      - name: hello-spring-boot
        image: bjlin888/eyesmedia-springboot-sample:1.0.0
        ports:
        - containerPort: 10000
          name: spring-boot-svc
