workshop1/hello-spring-boot-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: spring-boot-service
  namespace: hello-kubernetes
spec:
  selector:
    app: hello-spring-boot
  ports:
    - protocol: TCP
      port: 9091
      targetPort: spring-boot-svc
