workshop1/ingress.yml
# should enable addons ingress
# type "minikube addons enable ingress" in console to enable that.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - pathType: Prefix
        path: /sample
        backend:
          service:
            name: hello-springboot-svc
            port:
              number: 9091
